Import from yuggoth.org
https://www.yuggoth.org/gitweb?p=weather
commit 49a6ebe7607034a3a51782c3e97fa8d2bf123aeb

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,14 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+
+# Project specific
+*_old
+COOP-ACT.TXT
+Gaz_*_national.zip
+bp??????.dbx
+metar.tbl
+nsd_cccc.txt
+*.pyc
+zonecatalog.curr.tar
+
